--- a/_config.yml
+++ b/_config.yml
@@ -3,14 +3,14 @@ permalink:        pretty
 relative_permalinks: true
 
 # Setup
-title:            VINT
+title:            VINTeam
 tagline:          Вчимося разом.
 url:              http://getpoole.com
 paginate:         1
 baseurl:          /
 author:
   name:           Yuriy Grigortsevich
-  url:            
+  url:
   email:          GrigortsevichYuriy@gmail.com
 
 # Custom vars
