Update blog name

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ permalink:        pretty
 relative_permalinks: true
 
 # Setup
-title:            VINTeam
+title:            VinnytsiaTeam
 tagline:          Вчимося разом.
 url:              http://getpoole.com
 paginate:         1
