--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Permalinks
 permalink:        pretty
-#relative_permalinks: true
+relative_permalinks: true
 
 # Setup
 title:            VinnytsiaTeam
-tagline:          Learning together.
+tagline:          Вчимося разом.
 url:              http://getpoole.com
 paginate:         1
 baseurl:          /
@@ -19,7 +19,7 @@ github:
   repo:           https://github.com/poole/poole
 
 pages_list:
-  Archive: '/archive'
-  About: '/about'
+  Архів: '/archive'
+  Про нас: '/about'
 
 #  Feed: '/atom.xml'
