--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ permalink:        pretty
 
 # Setup
 title:            VinnytsiaTeam
-tagline:          Вчимося разом2.
+tagline:          Вчимося разом.
 url:              http://getpoole.com
 paginate:         1
 baseurl:          ""
